# tech-jobs-agent

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: job-bot.yml
database/: db.py
services/: llm_helper.py  yt_transcript_fetcher.py
